Fixed styles of Features-skeleton on mobile-media.

--- a/src/components/FeaturesSkeleton/styles.module.css
+++ b/src/components/FeaturesSkeleton/styles.module.css
@@ -1,8 +1,8 @@
 .section {
-  /* position: absolute;
-  top: 4419px;
+  position: absolute;
+  top: 4402px;
   left: 0;
-  right: 0; */
+  right: 0;
   opacity: 0.5;
   padding: 84px 0;
 }
@@ -13,7 +13,11 @@
   padding: 0 31px;
 }
 
-.subtitle {
+.content {
+  margin-bottom: 88px;
+}
+
+.subTitle {
   max-width: 200px;
   height: 15px;
   border-radius: 10px;
@@ -50,8 +54,12 @@
   margin-bottom: 44px;
 }
 
+.paragraph:nth-child(8) {
+  margin-bottom: 24px;
+}
+
 .paragraph.last {
-  margin-bottom: 100px;
+  margin-bottom: 0;
 }
 
 .text {
